-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Fully Compatible
-
Repl 2021-01-25
-
17
-
None
-
None
-
None
-
None
-
None
-
None
-
None
This failpoint is error-prone. It is very hard to use it correctly because we check the conditions for the failpoint in TenantCollectionCloner::insertDocumentsCallback. But multiple calls of TenantCollectionCloner::insertDocumentsCallback for different batches could run in parallel because it's scheduled on an executor. So there could be races when using this failpoint together with a small collectionClonerBatchSize because the check for the failpoint's conditions may not align with the batch boundaries.
I think we can delete this failpoint but use tenantMigrationHangCollectionClonerAfterHandlingBatchResponse instead.