SERVER-53721: Delete failpoint tenantMigrationHangDuringCollectionClone